// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should log in successfully when valid email and password are entered 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-3"
      >
        <form>
          <div
            class="mb-3"
          >
            <label
              class="mb-1"
              for="inputEmail"
            >
              Email
            </label>
            <input
              class="form-control"
              data-testid="inputEmail"
              id="inputEmail"
              placeholder="Input e-mail"
              type="email"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="mb-1"
              for="inputPassword"
            >
              Password
            </label>
            <input
              class="form-control"
              data-testid="inputPassword"
              id="inputPassword"
              placeholder="Input password"
              type="password"
            />
          </div>
          <button
            class="btn btn-primary mt-3 w-100"
            type="button"
          >
            Log In
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-3"
    >
      <form>
        <div
          class="mb-3"
        >
          <label
            class="mb-1"
            for="inputEmail"
          >
            Email
          </label>
          <input
            class="form-control"
            data-testid="inputEmail"
            id="inputEmail"
            placeholder="Input e-mail"
            type="email"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="mb-1"
            for="inputPassword"
          >
            Password
          </label>
          <input
            class="form-control"
            data-testid="inputPassword"
            id="inputPassword"
            placeholder="Input password"
            type="password"
          />
        </div>
        <button
          class="btn btn-primary mt-3 w-100"
          type="button"
        >
          Log In
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login should show loading spinner while fetching 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-3"
      >
        <form>
          <div
            class="mb-3"
          >
            <label
              class="mb-1"
              for="inputEmail"
            >
              Email
            </label>
            <input
              class="form-control"
              data-testid="inputEmail"
              id="inputEmail"
              placeholder="Input e-mail"
              type="email"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="mb-1"
              for="inputPassword"
            >
              Password
            </label>
            <input
              class="form-control"
              data-testid="inputPassword"
              id="inputPassword"
              placeholder="Input password"
              type="password"
            />
          </div>
          <button
            class="btn btn-primary mt-3 w-100"
            type="button"
          >
            <div
              class="spinner-border spinner-border-sm"
              role="status"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-3"
    >
      <form>
        <div
          class="mb-3"
        >
          <label
            class="mb-1"
            for="inputEmail"
          >
            Email
          </label>
          <input
            class="form-control"
            data-testid="inputEmail"
            id="inputEmail"
            placeholder="Input e-mail"
            type="email"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="mb-1"
            for="inputPassword"
          >
            Password
          </label>
          <input
            class="form-control"
            data-testid="inputPassword"
            id="inputPassword"
            placeholder="Input password"
            type="password"
          />
        </div>
        <button
          class="btn btn-primary mt-3 w-100"
          type="button"
        >
          <div
            class="spinner-border spinner-border-sm"
            role="status"
          >
            <span
              class="visually-hidden"
            >
              Loading...
            </span>
          </div>
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
